--- a/loon.conf
+++ b/loon.conf
@@ -17,8 +17,6 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 [Proxy]
 
 [Remote Proxy]
-新一元 = https://api.efanyunapi.com/ssr/415870/AfhBY9MRhF,parser-enabled = true,udp=true,block-quic=true,fast-open=default,vmess-aead=true,skip-cert-verify=true,enabled=true,flexible-sni=true
-一元机场 = https://50814b70.misub-bbz.pages.dev/auto,parser-enabled = true,udp=true,block-quic=true,fast-open=default,vmess-aead=true,skip-cert-verify=true,enabled=false,flexible-sni=true
 
 
 [Proxy Group]
@@ -34,6 +32,13 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 Telegram = select,美国节点,香港节点,日本节点,台湾节点,狮城节点,全球节点,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
 YouTube = select,美国节点,香港节点,日本节点,台湾节点,狮城节点,全球节点,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
 
+[Remote Filter]
+全部 = NameRegex, FilterKey = "^(?!.*网易云)"
+香港 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
+台湾 = NameRegex, FilterKey = "(?i)(台|TW|Tai|中国)"
+日本 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
+美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
+狮城 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
 
 [Plugin]
 # ================================== PLUGIN ===================================
