--- a/loon.conf
+++ b/loon.conf
@@ -1,4 +1,5 @@
 [General]
+# > 基础配置
 # ================================= GENERAL =================================
 ip-mode = v4-only
 ipv6-vif = off
@@ -17,30 +18,65 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 [Proxy]
 
 [Remote Proxy]
-
+# > 节点订阅
 
 [Proxy Group]
 # > 节点策略
-海外服务 = select,全球节点,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://cp.cloudflare.com/generate_204,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Macao.png
+海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://cp.cloudflare.com/generate_204,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Macao.png
 全球节点 = url-test,全部,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/European_Union.png
 香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Hong_Kong.png
 台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Taiwan.png
 美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/United_States.png
 日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Japan.png
 狮城节点 = url-test,狮城,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Singapore.png
+英国节点 = url-test,英国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
+韩国节点 = url-test,韩国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
+德国节点 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
+印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
+俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
+
 # > 软件策略
-Telegram = select,美国节点,香港节点,日本节点,台湾节点,狮城节点,全球节点,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Telegram.png
-YouTube = select,美国节点,香港节点,日本节点,台湾节点,狮城节点,全球节点,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
+YouTube = select,香港,台湾,美国,日本,狮城,英国,韩国,德国,印度,俄罗斯,全球,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
 
 [Remote Filter]
-全部 = NameRegex, FilterKey = "^(?!.*网易云)"
-香港 = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
-台湾 = NameRegex, FilterKey = "(?i)(台|TW|Tai|中国)"
-日本 = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-美国 = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
-狮城 = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
+香港 = NameRegex, FilterKey = "(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$"
+台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
+美国 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$"
+日本 = NameRegex, FilterKey = "(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$"
+狮城 = NameRegex, FilterKey = "(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$"
+英国 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
+韩国 = NameRegex, FilterKey = "(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$"
+德国 = NameRegex, FilterKey = "🇩🇪|德国|DEU|DE|柏林|慕尼黑|汉堡|科隆|Germany"
+印度 = NameRegex, FilterKey = "🇮🇳|印度|IN|IND|孟买|新德里|高知|Republic of India|India"
+俄罗斯 = NameRegex, FilterKey = "🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什"
+
+
+[Remote Rule]
+# > 分流规则
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppStore.list, policy=DIRECT, tag=苹果商店, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleID.list, policy=DIRECT, tag=苹果账号, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Apple.list, policy=DIRECT, tag=苹果分流, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/DouYin.list, policy=DIRECT, tag=国内抖音, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/WeChat.list, policy=DIRECT, tag=微信分流, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Lan.list, policy=DIRECT, tag=本地分流, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitLab.list, policy=DIRECT, tag=储存仓库, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/ChinaASN.list, policy=DIRECT, tag=ASN直连, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleProxy.list, policy=海外服务, tag=苹果代理, enabled=true
+# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TikTok.list, policy=台湾节点, tag=海外抖音, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Google.list, policy=美国节点, tag=谷歌分流, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitHub.list, policy=香港节点, tag=仓库分流, enabled=true
+# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/YouTube.list, policy=香港节点, tag=油管视频, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Telegram.list, policy=日本节点, tag=电报消息, enabled=true
+# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Twitter.list, policy=海外服务, tag=推特分流, enabled=true
+# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Facebook.list, policy=海外服务, tag=脸书分流, enabled=true
+# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Bing.list, policy=美国节点, tag=必应搜索, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TestFlight.list, policy=海外服务, tag=TestFlight, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/HTTPDNS.Block.list, policy=REJECT, tag=阻止常见DNS, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Reject.list, policy=REJECT, tag=广告列表, enabled=true
 
 [Plugin]
+# > 远程插件
 # ================================== PLUGIN ===================================
 https://github.com/Moli-X/Tool/raw/X/Loon/Plugin/Kelee/DNS.plugin, tag=DNS映射, enabled=true
 https://kelee.one/Tool/Loon/Lpx/XiaomiSpeaker_remove_ads.lpx, enabled=true
@@ -92,8 +128,6 @@ mtalk.google.com = 108.177.125.188
 dl.google.com = server:119.29.29.29
 dl.l.google.com = server:119.29.29.29
 
-
-
 [Rule]
 # ================================= RULE ====================================
 # 局域网
@@ -105,32 +139,6 @@ IP-CIDR, 127.0.0.1/8, DIRECT, no-resolve
 DOMAIN,p14-buy.itunes.apple.com,海外服务
 GEOIP,CN,DIRECT
 FINAL,海外服务
-
-[Remote Rule]
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TeamViewer.list, policy=DIRECT, tag=远程控制, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppStore.list, policy=DIRECT, tag=苹果商店, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleID.list, policy=DIRECT, tag=苹果账号, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Apple.list, policy=DIRECT, tag=苹果分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/DouYin.list, policy=DIRECT, tag=国内抖音, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/WeChat.list, policy=DIRECT, tag=微信分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Lan.list, policy=DIRECT, tag=本地分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitLab.list, policy=DIRECT, tag=储存仓库, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/ChinaASN.list, policy=DIRECT, tag=ASN直连, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleProxy.list, policy=海外服务, tag=苹果代理, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TikTok.list, policy=台湾节点, tag=海外抖音, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Google.list, policy=美国节点, tag=谷歌分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitHub.list, policy=香港节点, tag=仓库分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/OpenAI.list, policy=日本节点, tag=人工智能, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/YouTube.list, policy=香港节点, tag=油管视频, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Notion.list, policy=海外服务, tag=国外笔记, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Telegram.list, policy=日本节点, tag=电报消息, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Twitter.list, policy=海外服务, tag=推特分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Facebook.list, policy=海外服务, tag=脸书分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Bing.list, policy=美国节点, tag=必应搜索, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TestFlight.list, policy=海外服务, tag=TestFlight, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/HTTPDNS.Block.list, policy=REJECT, tag=阻止常见DNS, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Reject.list, policy=REJECT, tag=广告列表, enabled=true
 
 
 [MITM]
