--- a/loon.conf
+++ b/loon.conf
@@ -23,22 +23,23 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 [Proxy Group]
 # > 节点策略
 海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://cp.cloudflare.com/generate_204,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Macao.png
-全球节点 = url-test,全部,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/European_Union.png
+全球节点 = url-test,全球,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/mphin/GroupIcons/main/icon/emoji/openmoji/emojiall_recycle.png
 香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Hong_Kong.png
 台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Taiwan.png
 美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/United_States.png
 日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Japan.png
 狮城节点 = url-test,狮城,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Singapore.png
-英国节点 = url-test,英国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
-韩国节点 = url-test,韩国节点,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
+英国节点 = url-test,英国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
+韩国节点 = url-test,韩国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
 德国节点 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
 印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
 俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
 
 # > 软件策略
-YouTube = select,香港,台湾,美国,日本,狮城,英国,韩国,德国,印度,俄罗斯,全球,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
+YouTube = select,香港,台湾,美国,日本,狮城,英国,韩国,德国,印度,俄罗斯,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
 
 [Remote Filter]
+全球 = NameRegex, FilterKey = "^(?!.*(?:到期|剩余|流量|时间|官网|产品|维护|重置|过期|群|上网|恢复|通知｜订阅|机场|官址|去除|更新|重新)).*$"
 香港 = NameRegex, FilterKey = "(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$"
 台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
 美国 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$"
@@ -68,12 +69,9 @@ https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitHub.list, policy=香港节点
 # https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/YouTube.list, policy=香港节点, tag=油管视频, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Telegram.list, policy=日本节点, tag=电报消息, enabled=true
-# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Twitter.list, policy=海外服务, tag=推特分流, enabled=true
-# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Facebook.list, policy=海外服务, tag=脸书分流, enabled=true
-# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Bing.list, policy=美国节点, tag=必应搜索, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TestFlight.list, policy=海外服务, tag=TestFlight, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/HTTPDNS.Block.list, policy=REJECT, tag=阻止常见DNS, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Reject.list, policy=REJECT, tag=广告列表, enabled=true
+
 
 [Plugin]
 # > 远程插件
@@ -93,17 +91,17 @@ https://kelee.one/Tool/Loon/Lpx/CoolApk_remove_ads.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Bilibili_remove_ads.lpx, enabled=true
 https://raw.githubusercontent.com/deezertidal/private/master/plugallery/qmxs.plugin, enabled=true
 https://raw.githubusercontent.com/app2smile/rules/master/plugin/zhihu.plugin, enabled=true
-https://kelee.one/Tool/Loon/Lpx/LoonGallery.lpx, policy=兜底后备策略, enabled=true
+https://kelee.one/Tool/Loon/Lpx/LoonGallery.lpx, policy=海外服务, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Block_HTTPDNS.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/BlockAdvertisers.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Remove_ads_by_keli.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/QuickSearch.lpx, enabled=true
-https://kelee.one/Tool/Loon/Lpx/Prevent_DNS_Leaks.lpx, policy=兜底后备策略, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Prevent_DNS_Leaks.lpx, policy=海外服务, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Node_detection_tool.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/TestFlightRegionUnlock.lpx, policy=DIRECT, enabled=true
-https://kelee.one/Tool/Loon/Lpx/BoxJs.lpx, policy=兜底后备策略, enabled=true
-https://kelee.one/Tool/Loon/Lpx/Sub-Store.lpx, policy=兜底后备策略, enabled=true
-https://kelee.one/Tool/Loon/Lpx/Script-Hub.lpx, policy=兜底后备策略, enabled=true
+https://kelee.one/Tool/Loon/Lpx/BoxJs.lpx, policy=海外服务, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Sub-Store.lpx, policy=海外服务, enabled=true
+https://kelee.one/Tool/Loon/Lpx/Script-Hub.lpx, policy=海外服务, enabled=true
 
 [Host]
 # =================================== HOST ====================================
