--- a/loon.conf
+++ b/loon.conf
@@ -36,7 +36,7 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
 
 # > 软件策略
-YouTube = select,香港,台湾,美国,日本,狮城,英国,韩国,德国,印度,俄罗斯,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
+YouTube = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,英国节点,韩国节点,德国节点,印度节点,俄罗斯,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
 
 [Remote Filter]
 全球 = NameRegex, FilterKey = "^(?!.*(?:到期|剩余|流量|时间|官网|产品|维护|重置|过期|群|上网|恢复|通知｜订阅|机场|官址|去除|更新|重新)).*$"
