--- a/loon.conf
+++ b/loon.conf
@@ -35,8 +35,9 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
 俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
 
-# > 软件策略
-YouTube = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,英国节点,韩国节点,德国节点,印度节点,俄罗斯,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/erdongchanyo/icon/main/Policy-Filter/Youtube.png
+# > 兜底策略
+漏网之鱼 = select,海外服务,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Socloud.png
+
 
 [Remote Filter]
 全球 = NameRegex, FilterKey = "^(?!.*(?:到期|剩余|流量|时间|官网|产品|维护|重置|过期|群|上网|恢复|通知｜订阅|机场|官址|去除|更新|重新)).*$"
@@ -63,10 +64,10 @@ https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Lan.list, policy=DIRECT, tag=本
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitLab.list, policy=DIRECT, tag=储存仓库, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/ChinaASN.list, policy=DIRECT, tag=ASN直连, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleProxy.list, policy=海外服务, tag=苹果代理, enabled=true
-# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TikTok.list, policy=台湾节点, tag=海外抖音, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TikTok.list, policy=台湾节点, tag=海外抖音, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Google.list, policy=美国节点, tag=谷歌分流, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/GitHub.list, policy=香港节点, tag=仓库分流, enabled=true
-# https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
+https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/YouTube.list, policy=香港节点, tag=油管视频, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Telegram.list, policy=日本节点, tag=电报消息, enabled=true
 https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TestFlight.list, policy=海外服务, tag=TestFlight, enabled=true
@@ -128,15 +129,40 @@ dl.l.google.com = server:119.29.29.29
 
 [Rule]
 # ================================= RULE ====================================
-# 局域网
-IP-CIDR, 192.168.0.0/16, DIRECT, no-resolve
-IP-CIDR, 10.0.0.0/8, DIRECT, no-resolve
-IP-CIDR, 172.16.0.0/12, DIRECT, no-resolve
-IP-CIDR, 127.0.0.1/8, DIRECT, no-resolve
-# 海外服务
-DOMAIN,p14-buy.itunes.apple.com,海外服务
-GEOIP,CN,DIRECT
-FINAL,海外服务
+# > 苹果消息推送服务
+DOMAIN-SUFFIX,push.apple.com,DIRECT
+DOMAIN,identity.apple.com,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT
+IP-CIDR,17.249.0.0/16,DIRECT
+IP-CIDR,17.252.0.0/16,DIRECT
+IP-CIDR,17.57.144.0/22,DIRECT
+IP-CIDR,17.188.128.0/18,DIRECT
+IP-CIDR,17.188.20.0/23,DIRECT
+IP-CIDR6,2620:149:a44::/48,DIRECT
+IP-CIDR6,2403:300:a42::/48,DIRECT
+IP-CIDR6,2403:300:a51::/48,DIRECT
+IP-CIDR6,2a01:b740:a42::/48,DIRECT
+# > 银行直连
+DOMAIN-SUFFIX,95599.cn,DIRECT
+DOMAIN-SUFFIX,abchina.com,DIRECT
+DOMAIN-SUFFIX,bscabank.com,DIRECT
+DOMAIN-SUFFIX,openaboc.cn,DIRECT
+DOMAIN-SUFFIX,openaboc.com,DIRECT
+DOMAIN-SUFFIX,openaboc.com.cn,DIRECT
+# > 12306分流
+DOMAIN,ad.12306.cn,DIRECT
+# > 本地局域网
+IP-CIDR,10.0.0.0/8,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
+IP-CIDR,224.0.0.0/24,DIRECT
+IP-CIDR,182.254.116.0/24,DIRECT
+IP-CIDR6,fe80::/10,DIRECT
+# > GEOIP IP库分流
+GEOIP,cn,DIRECT
+# > 兜底规则
+FINAL,漏网之鱼
 
 
 [MITM]
