--- a/loon.conf
+++ b/loon.conf
@@ -149,7 +149,7 @@ DOMAIN-SUFFIX,openaboc.com.cn,DIRECT
 # > 12306分流
 DOMAIN,ad.12306.cn,DIRECT
 # > GEOIP IP库分流
-GEOIP,cn,DIRECT
+GEOIP,CN,DIRECT
 # > 兜底规则
 FINAL,漏网之鱼
 
