--- a/loon.conf
+++ b/loon.conf
@@ -22,18 +22,18 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 
 [Proxy Group]
 # > 节点策略
-全球节点 = url-test,全球,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
-海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://cp.cloudflare.com/generate_204,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Macao.png
-香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Hong_Kong.png
-台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Taiwan.png
-美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/United_States.png
-日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Japan.png
-狮城节点 = url-test,狮城,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://github.com/Moli-X/Tool/raw/X/Icon/Flag/Pixel144/Singapore.png
-英国节点 = url-test,英国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
-韩国节点 = url-test,韩国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
-德国节点 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
-印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
-俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
+全球节点 = url-test,全球,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
+香港节点 = url-test,香港,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HK.png
+台湾节点 = url-test,台湾,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TW.png
+美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/US.png
+日本节点 = url-test,日本,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/JP.png
+狮城节点 = url-test,狮城,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SG.png
+英国节点 = url-test,英国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
+韩国节点 = url-test,韩国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
+德国节点 = url-test,德国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
+印度节点 = url-test,印度,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
+俄罗斯 = url-test,俄罗斯,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
 
 # > 兜底策略
 漏网之鱼 = select,海外服务,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Socloud.png
@@ -55,26 +55,28 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 
 [Remote Rule]
 # > 分流规则
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppStore.list, policy=DIRECT, tag=苹果商店, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleID.list, policy=DIRECT, tag=苹果账号, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Apple.list, policy=DIRECT, tag=苹果分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/DouYin.list, policy=DIRECT, tag=国内抖音, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/WeChat.list, policy=DIRECT, tag=微信分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Lan.list, policy=DIRECT, tag=本地分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/ChinaASN.list, policy=DIRECT, tag=ASN直连, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/AppleProxy.list, policy=海外服务, tag=苹果代理, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Google.list, policy=美国节点, tag=谷歌分流, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/YouTube.list, policy=香港节点, tag=油管视频, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/Telegram.list, policy=日本节点, tag=电报消息, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/TestFlight.list, policy=海外服务, tag=TestFlight, enabled=true
-https://github.com/Moli-X/Tool/raw/X/Loon/Rules/HTTPDNS.Block.list, policy=REJECT, tag=阻止常见DNS, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list, policy=DIRECT, tag=局域网, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/AppStore.list, policy=DIRECT, tag=苹果商店, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/AppleID.list, policy=DIRECT, tag=苹果账号, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/Apple.list, policy=DIRECT, tag=苹果分流, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/DouYin.list, policy=DIRECT, tag=国内抖音, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/WeChat.list, policy=DIRECT, tag=微信分流, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/Lan.list, policy=DIRECT, tag=本地分流, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/ChinaASN.list, policy=DIRECT, tag=ASN直连, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/AppleProxy.list, policy=海外服务, tag=苹果代理, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/Google.list, policy=美国节点, tag=谷歌分流, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/Spotify.list, policy=美国节点, tag=Spotify, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/YouTube.list, policy=香港节点, tag=油管视频, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/Telegram.list, policy=日本节点, tag=电报消息, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/TestFlight.list, policy=海外服务, tag=TestFlight, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/HTTPDNS.Block.list, policy=REJECT, tag=阻止常见DNS, enabled=true
+Bank.list, policy=DIRECT, tag=银行直连, enabled=true
 
 
 [Plugin]
 # > 远程插件
 # ================================== PLUGIN ===================================
-https://github.com/Moli-X/Tool/raw/X/Loon/Plugin/Kelee/DNS.plugin, tag=DNS映射, enabled=true
+https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Plugin/Kelee/DNS.plugin, tag=DNS映射, enabled=true
 https://kelee.one/Tool/Loon/Lpx/XiaomiSpeaker_remove_ads.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/WexinMiniPrograms_Remove_ads.lpx, enabled=true
 https://kelee.one/Tool/Loon/Lpx/Switch_github_mirror.lpx, enabled=true
@@ -139,15 +141,23 @@ IP-CIDR6,2620:149:a44::/48,DIRECT
 IP-CIDR6,2403:300:a42::/48,DIRECT
 IP-CIDR6,2403:300:a51::/48,DIRECT
 IP-CIDR6,2a01:b740:a42::/48,DIRECT
-# > 银行直连
-DOMAIN-SUFFIX,95599.cn,DIRECT
-DOMAIN-SUFFIX,abchina.com,DIRECT
-DOMAIN-SUFFIX,bscabank.com,DIRECT
-DOMAIN-SUFFIX,openaboc.cn,DIRECT
-DOMAIN-SUFFIX,openaboc.com,DIRECT
-DOMAIN-SUFFIX,openaboc.com.cn,DIRECT
+
 # > 12306分流
-DOMAIN,ad.12306.cn,DIRECT
+DOMAIN-SUFFIX,12306.cn
+DOMAIN-SUFFIX,95306.cn
+DOMAIN-SUFFIX,95572.com
+DOMAIN-SUFFIX,china-railway.com.cn
+DOMAIN-SUFFIX,china-ric.com
+DOMAIN-SUFFIX,crct.com
+DOMAIN-SUFFIX,cre.cn
+DOMAIN-SUFFIX,crecc.com.cn
+DOMAIN-SUFFIX,creip.cn
+DOMAIN-SUFFIX,crscl.com.cn
+DOMAIN-SUFFIX,gzrailway.com.cn
+DOMAIN-SUFFIX,nntlj.com
+DOMAIN-SUFFIX,peoplerail.com
+DOMAIN-SUFFIX,rails.cn
+DOMAIN-SUFFIX,tdpress.com
 # > GEOIP IP库分流
 GEOIP,CN,DIRECT
 # > 兜底规则
