--- a/loon.conf
+++ b/loon.conf
@@ -143,21 +143,21 @@ IP-CIDR6,2403:300:a51::/48,DIRECT
 IP-CIDR6,2a01:b740:a42::/48,DIRECT
 
 # > 12306分流
-DOMAIN-SUFFIX,12306.cn
-DOMAIN-SUFFIX,95306.cn
-DOMAIN-SUFFIX,95572.com
-DOMAIN-SUFFIX,china-railway.com.cn
-DOMAIN-SUFFIX,china-ric.com
-DOMAIN-SUFFIX,crct.com
-DOMAIN-SUFFIX,cre.cn
-DOMAIN-SUFFIX,crecc.com.cn
-DOMAIN-SUFFIX,creip.cn
-DOMAIN-SUFFIX,crscl.com.cn
-DOMAIN-SUFFIX,gzrailway.com.cn
-DOMAIN-SUFFIX,nntlj.com
-DOMAIN-SUFFIX,peoplerail.com
-DOMAIN-SUFFIX,rails.cn
-DOMAIN-SUFFIX,tdpress.com
+DOMAIN-SUFFIX,12306.cn,DIRECT
+DOMAIN-SUFFIX,95306.cn,DIRECT
+DOMAIN-SUFFIX,95572.com,DIRECT
+DOMAIN-SUFFIX,china-railway.com.cn,DIRECT
+DOMAIN-SUFFIX,china-ric.com,DIRECT
+DOMAIN-SUFFIX,crct.com,DIRECT
+DOMAIN-SUFFIX,cre.cn,DIRECT
+DOMAIN-SUFFIX,crecc.com.cn,DIRECT
+DOMAIN-SUFFIX,creip.cn,DIRECT
+DOMAIN-SUFFIX,crscl.com.cn,DIRECT
+DOMAIN-SUFFIX,gzrailway.com.cn,DIRECT
+DOMAIN-SUFFIX,nntlj.com,DIRECT
+DOMAIN-SUFFIX,peoplerail.com,DIRECT
+DOMAIN-SUFFIX,rails.cn,DIRECT
+DOMAIN-SUFFIX,tdpress.com,DIRECT
 # > GEOIP IP库分流
 GEOIP,CN,DIRECT
 # > 兜底规则
