--- a/loon.conf
+++ b/loon.conf
@@ -9,7 +9,7 @@ disconnect-on-policy-change = false
 test-timeout = 3
 switch-node-after-failure-times = 3
 internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
-proxy-test-url = http://cp.cloudflare.com/generate_204
+proxy-test-url = http://www.gstatic.com/generate_204
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scripts/sub-store-parser.js
 geoip-url = https://geodata.kelee.one/Country-Masaiki.mmdb
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -22,18 +22,18 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 
 [Proxy Group]
 # > 节点策略
-全球节点 = url-test,全球,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
-海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
-香港节点 = url-test,香港,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HK.png
-台湾节点 = url-test,台湾,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TW.png
-美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/US.png
-日本节点 = url-test,日本,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/JP.png
-狮城节点 = url-test,狮城,url = http://cp.cloudflare.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SG.png
-英国节点 = url-test,英国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
-韩国节点 = url-test,韩国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
-德国节点 = url-test,德国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
-印度节点 = url-test,印度,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
-俄罗斯 = url-test,俄罗斯,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
+全球节点 = url-test,全球,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
+香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HK.png
+台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TW.png
+美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/US.png
+日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/JP.png
+狮城节点 = url-test,狮城,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SG.png
+英国节点 = url-test,英国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
+韩国节点 = url-test,韩国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
+德国节点 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
+印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
+俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
 
 # > 兜底策略
 漏网之鱼 = select,海外服务,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Socloud.png
