添加去除emoji图标规则

--- a/loon.conf
+++ b/loon.conf
@@ -22,40 +22,42 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 
 [Proxy Group]
 # > 节点策略
-全球节点 = url-test,全球,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
-海外服务 = select,香港节点,台湾节点,美国节点,日本节点,狮城节点,url = http://www.gstatic.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
-香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/HK.png
-台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TW.png
-美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/US.png
-日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/JP.png
-狮城节点 = url-test,狮城,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SG.png
-英国节点 = url-test,英国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/UK.png
-韩国节点 = url-test,韩国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/KR.png
-德国节点 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DE.png
-印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/IN.png
-俄罗斯 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/RU.png
-
+全球节点 = select,全球,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/Proxy.png
+海外服务 = select,香港节点,台湾节点,美国节点,日本节点,新加坡节点,url = http://www.gstatic.com/generate_204,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/Final.png
+香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/HK.png
+台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/TW.png
+美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/US.png
+日本节点 = url-test,日本,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/JP.png
+英国节点 = url-test,英国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/UK.png
+韩国节点 = url-test,韩国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/KR.png
+德国节点 = url-test,德国,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/DE.png
+印度节点 = url-test,印度,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/IN.png
+新加披节点 = url-test,新加坡,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/SG.png
+俄罗斯节点 = url-test,俄罗斯,url = http://www.gstatic.com/generate_204,interval = 600,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/RU.png
 # > 兜底策略
-漏网之鱼 = select,海外服务,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Socloud.png
-
+漏网之鱼 = select,海外服务,DIRECT,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure@master/IconSet/mini/Unlock.png
+# 漏网之鱼 = select,海外服务,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Socloud.png
 
 [Remote Filter]
+# > 去除emoji图标
+去除emoji = NameRegex, FilterKey = "[^\x00-\x7F]"
+
+# > 地区过滤器
 全球 = NameRegex, FilterKey = "^(?!.*(?:到期|剩余|流量|时间|官网|产品|维护|重置|过期|群|上网|恢复|通知｜订阅|机场|官址|去除|更新|重新)).*$"
 香港 = NameRegex, FilterKey = "(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$"
 台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
 美国 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$"
 日本 = NameRegex, FilterKey = "(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$"
-狮城 = NameRegex, FilterKey = "(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$"
 英国 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
 韩国 = NameRegex, FilterKey = "(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$"
 德国 = NameRegex, FilterKey = "🇩🇪|德国|DEU|DE|柏林|慕尼黑|汉堡|科隆|Germany"
 印度 = NameRegex, FilterKey = "🇮🇳|印度|IN|IND|孟买|新德里|高知|Republic of India|India"
+新加坡 = NameRegex, FilterKey = "(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$"
 俄罗斯 = NameRegex, FilterKey = "🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什"
 
 
 [Remote Rule]
 # > 分流规则
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list, policy=DIRECT, tag=局域网, enabled=true
 https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/AppStore.list, policy=DIRECT, tag=苹果商店, enabled=true
 https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/AppleID.list, policy=DIRECT, tag=苹果账号, enabled=true
 https://raw.githubusercontent.com/Moli-X/Tool/X/Loon/Rules/Apple.list, policy=DIRECT, tag=苹果分流, enabled=true
