添加去除emoji过滤器并更新节点订阅说明

--- a/loon.conf
+++ b/loon.conf
@@ -19,6 +19,10 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 
 [Remote Proxy]
 # > 节点订阅
+# 在下面添加你的实际节点订阅链接
+# 格式：订阅链接, tag=标签名, enabled=true, filter=去除emoji
+# 示例：https://example.com/subscribe, tag=示例订阅, enabled=true, filter=去除emoji
+# 添加filter=去除emoji参数可以去除节点名称中的emoji图标
 
 [Proxy Group]
 # > 节点策略
@@ -46,10 +50,10 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 全球 = NameRegex, FilterKey = "^(?!.*(?:到期|剩余|流量|时间|官网|产品|维护|重置|过期|群|上网|恢复|通知｜订阅|机场|官址|去除|更新|重新)).*$"
 香港 = NameRegex, FilterKey = "(?=.*(港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$"
 台湾 = NameRegex, FilterKey = "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$"
-美国 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|韓國|獅城)).)*$"
+美国 = NameRegex, FilterKey = "(?=.*(美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城)).)*$"
 日本 = NameRegex, FilterKey = "(?=.*(日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$"
 英国 = NameRegex, FilterKey = "🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰"
-韩国 = NameRegex, FilterKey = "(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$"
+韩国 = NameRegex, FilterKey = "(?=.*(KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|韓國|獅城)).)*$"
 德国 = NameRegex, FilterKey = "🇩🇪|德国|DEU|DE|柏林|慕尼黑|汉堡|科隆|Germany"
 印度 = NameRegex, FilterKey = "🇮🇳|印度|IN|IND|孟买|新德里|高知|Republic of India|India"
 新加坡 = NameRegex, FilterKey = "(?=.*(新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$"
