--- a/loon.conf
+++ b/loon.conf
@@ -22,7 +22,7 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 [Proxy Group]
 # > 节点策略
 全球节点 = select,全球,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/Proxy.png
-海外服务 = select,香港节点,台湾节点,美国节点,日本节点,新加坡节点,url = http://www.gstatic.com/generate_204,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/Final.png
+海外服务 = select,香港节点,台湾节点,美国节点,日本节点,英国节点,韩国节点,德国节点,印度节点,新加坡节点,俄罗斯节点,url = http://www.gstatic.com/generate_204,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/Final.png
 香港节点 = url-test,香港,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/HK.png
 台湾节点 = url-test,台湾,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/TW.png
 美国节点 = url-test,美国,url = http://www.gstatic.com/generate_204,interval = 1800,img-url = https://fastly.jsdelivr.net/gh/Koolson/Qure/IconSet/mini/US.png
